@@ -2,6 +2,8 @@
 
 0.128 "SR/CL: Leitmotiv: Toynbee Idea"
  431247 "Add a Scoring Rule" crashes if no article is selected (Christophe)
+ 432023 0.127 crashes when loading corrupted groups (Charles)
+ 432024 Speed improvements when saving and loading groups (Charles)
  431552 0.127 no longer stops downloading when disk is full (Alan Olsen)
  430958 Get N Headers fails if group has small # of headers (Anon)
  429449 Pan 0.126, 0.127 won't compile w/gtk 2.6.x (Jeff Berman)
